--- a/projects/LaTeX/Abgabe_Version.tex
+++ b/projects/LaTeX/Abgabe_Version.tex
@@ -1,11 +1,15 @@
 \documentclass{scrartcl}
 
 \usepackage[utf8]{inputenc} %enables utf8 encoding
+%\usepackage[latin1]{inputenc}
+\usepackage[ngerman]{babel}
 \usepackage[T1]{fontenc}
 \usepackage{ragged2e}       %used for text alignment
 \usepackage{amsmath, amsfonts,amssymb,amsthm} %stuff???
-
+\usepackage{endnotes}
 %Umlaute and shit  Ä/ä, Ö/ö, Ü/ü  ß
+\usepackage{hyperref}
+
 
 
 \title{Ein Dokument zum Üeben}
@@ -14,13 +18,23 @@
 
 \begin{document}
  \maketitle
-
- Dieses Dokument dient dazu, das Durchgenommene des \LaTeX-Einführungskurses - oder besser des ``LaTex-Einführungskurses'' - zu üben und zu vertiefen. \par
- Der obrige Satz ist übrigens ein Beispiel für eine {\itshape Alliteration}. Was genau ist - also\newline eine Definition - werden wir am Mittwoch dem Domkument hinzufügen; das Dokument wird also im Verlauf des Kurses noch ein bisschen wachsen... \par
- Heute begnügen wir uns damit, die folgenden Sachen auszuprobieren:
+\section{Einleitung}
+ Dieses Dokument dient dazu, das Durchgenommene des \LaTeX{}-Einführungskurses - oder besser des \glqq LaTex-Einführungskurses \footnote{alternativ könnte man diesen Einschub bezüglich der Schreibweise von \LaTeX{} auch als Fußnote machen} \grqq - zu üben und zu vertiefen. \par
+ Der obrige Satz ist übrigens ein Beispiel für eine {\itshape Alliteration}. Was genau ist - also eine \hyperref[Definition]{Definition} - werden wir am Mittwoch dem Domkument hinzufügen; das Dokument wird also im Verlauf des Kurses noch ein bisschen wachsen...
+ \newline
+ \newline
  
+% \begin{flushleft}
+ \label{Definition}\noindent \textbf{Definition 1.1.} Eine \textit{Alliteration} ein literarisches Stilmittel oder ein rethorisches Ele\-ment, bei der benachbarte Wörter den gleichen Anfangslaut (Anlaut) besitzen.
+% \end{flushleft}
+
+    
  \begin{itemize}
-  \item Aufzählungen und Auflistungen
+     
+ \item[] Diese Definition ist dem zugehörigen Wikipedia-Artikel 1 %hier REFERENZ einfuegen!!
+ entnommen.\newline Mit \LaTeX{} kann man u.a. folgende Sachen machen:
+ 
+ \item Aufzählungen und Auflistungen
         \begin{enumerate}
             \item Aufzählungen
             \item Auflistungen
@@ -35,6 +49,63 @@
  \end{itemize}\par
  
 Eher schlechter Stil ist {\tiny im Übrigen}, {\Huge ständig} die {\Large Schriftgröße} zu ändern oder Text will{\Huge kürli}ch {\itshape kursiv}, \textbf {fett}, \underline{unterstrichen} oder Ko\underline{m\textbf{bi}{\itshape na}t\textbf{io}n}en daraus zu setzen.
+
+\newpage
+
+\begin{tabular}{c | c | l}
+ Ein mathematischer Ausdruck & Leicht verändert & Bemerkungen \\
+ \hline
+ \tiny{$\frac{1}{1 + \frac{1}{1 + \frac{1}{1 + \frac{1}{1 + ...}}}}$} % groesse anpassen
+ & \large{$\frac{1}{1 + \frac{1}{1 + \frac{1}{1 + \frac{1}{1 + ...}}}} $} % groesse anpassen
+ & ein Kettenbruch, si\-ehe \newline auch \glqq goldener Schnitt \grqq , meist bezeichnet mit $\phi$  \\
  
  
+ \hline
+ $\int_{a}^{b} f(x) dx = [F(x)]_{a}^{b} = F(b) - F(a)$
+ & 
+ & siehe auch Hauptsatz der Differenzial- und In\-tegralrechnung \\
+ \hline
+ $1 + 2 + ... + n = \sum_{i = 1}^{n} i = \frac{n\cdot(n + 1)}{2}$
+ &
+ & Einfachsummenformel\\
+ \hline
+\end{tabular}
+\newline
+
+\section{Der Mathemodus, Tabellen \& mehr}
+
+%Umlaute and shit  Ä/ä, Ö/ö, Ü/ü  ß
+
+Neben den Formeln in \hyperref[table1]{Tabelle 1} ein paar weitere Sachen im Mathemodus:
+
+\begin{itemize}
+ 
+ \item Abschnittsweise definierte Funktionen \newline
+ \begin{center}
+ $
+ f(x) = \begin{cases}
+          (\frac{1}{2}) & \text{falls}\ x \in \mathbb{R} \textbackslash \mathbb{Q} \\
+          (\frac{1}{3} & \text{falls}\ x \in \mathbb{Q}
+         \end{cases}
+ $
+ \end{center}
+ \item Daferner kann man beisielsweise Wurzelzeichen $\sqrt[3]{2 + (3*2)}$ und Binominalkoeffizienten $\binom{n}{k}$ machen
+ 
+\end{itemize}
+
+
+
+\textbf{Bemerkung 1.} Um das Dokument etwas größer zu machen, f\"ugen wir an dieser Stelle mithilfe
+der Pakete \textit{blindtext}$^{\hyperref[blindtext]{2}}$ und \textit{libsum} Blindtext ein.
+$^{\hyperref[blind]{3}}$ Zun\"achst ersteres mit dem Befehl \textbackslash{}blindmathtrue und
+\textbackslash{}blindtext:\newline
+
+\blindtext %???
+\par Dies ist ein Blindtext zum testen von Textausgaben. Wer diesen Text liest ist selbst Schuld.
+$\sin^{2}{(\alpha)} + \cos^{2}{(\beta)} = 1$. Der Text gibt lediglich den Grauwert der Schrift an
+\textit{E = mc}$^{2}$. %HIER VERBESSERN!!
+Ist das wirklich so? Ist es gleichg\"ultig ob ich schreibe: \glqq Dies ist ein Blindtext\grqq oder \glqq Huardest gefburn\grqq ? Kjift - mitnichten! Ein Blindtext bietet mir wichtige Informationen.
+\Blindtext %????
+
+
 \end{document}
