--- a/projects/LaTeX/text_bib.bib
+++ b/projects/LaTeX/text_bib.bib
@@ -1,5 +1,8 @@
-@misc={testing,
-	title={Alliteration},
-	howpublished={\url{https://de.wikipedia.org/wiki/Alliteration}},
-	note={besucht am 12.02.2019}
-}
+@misc={wikiart,
+	title={{Alliteration}},
+	howpublished="\url{https://de.wikipedia.org/wiki/Alliteration}",
+	note="{besucht am 12.02.2019}"
+	}
+
+
+
