added c++ project directory

--- a/projects/LaTeX/text_bib.bib
+++ b/projects/LaTeX/text_bib.bib
@@ -1,7 +1,7 @@
-@misc={wikiart,
-	title={{Alliteration}},
-	howpublished="\url{https://de.wikipedia.org/wiki/Alliteration}",
-	note="{besucht am 12.02.2019}"
+@online={wikiart,
+	title={Alliteration},
+	url={https://de.wikipedia.org/wiki/Alliteration},
+	%date={12.02.2019}
 	}
 
 
