mod: some jupyter stuff

--- a/uni/Semester8/mod/week2/assignment2.tex
+++ b/uni/Semester8/mod/week2/assignment2.tex
@@ -33,13 +33,29 @@
 % If the total page number shows up as ?? in the footer you need to compile a second time.
 
 % Which assignment is this?
-\assignment{1}
+\assignment{2}
 
 
 \begin{document}
 
 \begin{exercise}{1}
-	part1
+	\begin{enumerate}[label=(\alph*)]
+		\item
+	%Der Massenzufluss an Salz in das Gef\"a{\ss} pro Zeiteinheit sei definiert als $m_{in} = rc_0$.
+	%Weiterhin sei der Massenabflu{\ss} an Salz definiert als $m_{out} = rc$, mit $c = c(t)$.
+	Die Menge an Salz im Gef\"a{\ss} definiert als% $m = Vc$, mit $m = m(t)$, woraus sich eine
+			zeitliche {\"A}nderung der Salzmasse im Gef\"a{\ss} von $m\dot = V $%c\dot$ ergibt.
+	Diese l\"asst sich au{\ss}erdem darstellen als $m\dot = rc_0 - rc$.\\
+	Kombiniert man diese Gleichungen, so erh\"alt man:
+
+		%\begin{align}
+		%			& m\dot	&= m\dot	\\
+		%	\leftrightarrow & Vc\dot&= rc_0 - rc	\\
+		%	\leftrightarrow	& c\dot &= \frac{rc_0}{V} - \frac{rc}{V}\\
+		%\end{align}
+
+		\item b
+	\end{enumerate}
 \end{exercise}
 
 \begin{exercise}{2}
